# craftgen

./: .gitignore  .gitmodules  .lintstagedrc.json  .npmrc  .prettierignore  README.md  bun.lockb  deno.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scratchpad.ipynb  turbo.json
.changeset/: blue-news-begin.md  blue-poems-relate.md  clever-worms-shake.md  config.json  early-buttons-press.md  empty-paws-hope.md  happy-shoes-arrive.md  many-pumpkins-cheer.md  olive-pugs-attend.md  proud-crabs-pay.md  quiet-onions-look.md  real-timers-marry.md  red-mails-leave.md  silver-fans-serve.md  soft-hounds-drum.md  stale-trainers-visit.md  strange-kids-think.md  wet-hairs-punch.md  wet-moles-accept.md  wild-mice-clap.md  witty-panthers-switch.md
.github/: FUNDING.yml
.github/workflows/: release.yml  version.yml
.zed/: settings.json
apps/: .env.example  .env.prod
apps/admin/: Dockerfile  README.md  directus.config.js  fly.toml  package.json  pnpm-lock.yaml  railway.json
apps/api/: CHANGELOG.md  index.ts  package.json
apps/core/: package.json  tsconfig.json
apps/database/: drizzle.config.ts  package.json
apps/db/: CHANGELOG.md  drizzle.config.ts  package.json
apps/desktop/: .prettierignore  CHANGELOG.md  README.md  eslint.config.mjs  index.html  justfile  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  functions  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/functions/: import_map.json
apps/desktop/src-tauri/functions/event/: index.ts
apps/desktop/src-tauri/functions/main/: index.ts
apps/desktop/src-tauri/functions/runner/: index.ts  ollama.ts
apps/desktop/src-tauri/functions/trigger/: index.ts
apps/desktop/src-tauri/functions/worker/: index.ts
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cmd.rs  dock.rs  main.rs  runtime.rs  setup.rs  tray.rs
apps/desktop/src-tauri/src/tray/: mod.rs  updater.rs
apps/directus/: docker-compose.yml
apps/docs/: package.json
apps/edge/: .gitignore  Dockerfile.api  Dockerfile.runtime  docker-compose.yml  justfile
apps/edge-functions/: Dockerfile  README.md  deno.json  docker-compose.yml  fly.toml  justfile
apps/extension/: CHANGELOG.md  package.json
apps/kirimase/: components.json  drizzle.config.ts  kirimase.config.json  package.json  tailwind.config.js  tsconfig.json
apps/next/: components.json  next.config.mjs  package.json  tailwind.config.js
apps/supabase/: drizzle.config.ts  handle_new_user.sql  package.json
apps/trigger/: .env.prod  README.md  docker-compose.yml  fly.toml
apps/web/: .gitignore  CHANGELOG.md  README.md  app.config.timestamp_1725940739658.js  app.config.ts  bun.lockb  components.plate.json  contentlayer.config.ts  deno.json  next.config.js  next.config.mjs  nitro.config.ts  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite-env.d.ts
apps/workers/: package.json  wrangler.toml
nodes/: readme.md
nodes/base/: config.ts  deno.json  deps.ts  router.ts  trpc.ts
profile/: README.md
(+1379 files in other folders)
