[package]
name = "CraftGen"
version = "0.0.10"
description = "CraftGen AI Agent Building Platform"
authors = ["necmetin karakaya <necmetin.karakaya@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "devtools", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.0.0-beta.5"
tauri-plugin-notification = "2.0.0-beta.5"
eyre = "0.6.12"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
tauri-plugin-store = "2.0.0-beta.6"
tokio = { version = "1.37.0", features = ["full"] }
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-log = {version =   "2.0.0-beta.6", features = ["colored"] } 
tauri-plugin-http = "2.0.0-beta.10"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "v2" }
sentry = "0.34.0"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-process = "2.0.0-beta.6"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.8"

